--- a/CoursesUpload.html
+++ b/CoursesUpload.html
@@ -82,7 +82,7 @@
             formData.append('file', file);
 
             try {
-                const response = await fetch('https://exit-portal-requirement-klu.onrender.com/api/courses/populate', {
+                const response = await fetch('http://localhost:8080/api/courses/populate', {
                     method: 'POST',
                     body: formData
                 });
