final commit for deployment

--- a/Student-details-upload.html
+++ b/Student-details-upload.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div class="upload-form">
-      <h2>Upload CSV File</h2>
+      <h2>Upload CSV File original</h2>
       <input type="file" id="csvFile" accept=".csv" />
       <button onclick="uploadFile()">Submit</button>
       <div id="status" class="status"></div>
